--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -13,6 +13,8 @@
     <script defer src="./js/script.js"></script>
   </head>
   <body>
+    <!-- Aside Menu -->
+    <div class="container-fluid styleguide__section"></div>
     <!-- Base styles Examples -->
     <div class="container">
       <div class="styleguide__section">
