Add article shadow

--- a/src/index.html
+++ b/src/index.html
@@ -301,7 +301,7 @@ h3.5C11.3,1,12,1.7,12,2.5V10.5z"
     </aside>
     <!-- Articles -->
     <section class="page__articles">
-      <article class="page__article">Hellos</article>
+      <article class="page__article"></article>
       <article class="page__article"></article>
     </section>
   </body>
