--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
     <!-- Aside Menu -->
     <aside class="aside__menu col-xl-2 col-lg-4 col-md-4 col-sm-12">
       <ul class="aside__menu--list">
-        <li class="row">
+        <li class="row active">
           <div class="aside__item--icon">
             <svg
               version="1.1"
@@ -301,8 +301,149 @@ h3.5C11.3,1,12,1.7,12,2.5V10.5z"
     </aside>
     <!-- Articles -->
     <section class="page__articles">
-      <article class="page__article"></article>
-      <article class="page__article"></article>
+      <article class="page__article">
+        <div class="article__section">
+          <div class="container-fluid">
+            <div class="row">
+              <h2 class="text--main">General Statistic</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="article__section">
+          <div class="container-fluid">
+            <div class="row article--center">
+              <div class="row date__picker">
+                <div class="date__picker--left">16.05.2020</div>
+                <div class="date__picker--right">16.05.2020</div>
+                <div class="date__picker--icon interactive">
+                  <svg
+                    version="1.1"
+                    id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    x="0px"
+                    y="0px"
+                    viewBox="0 0 13 13"
+                    style="enable-background: new 0 0 13 13"
+                    xml:space="preserve"
+                  >
+                    <path
+                      d="M0,0v4h13V0H0z M12,3H1V1h11V3z M0,7h3V6H0V7z M5,7h3V6H5V7z M10,7h3V6h-3V7z M0,10h3V9H0V10z M5,10h3V9H5V10z M10,10h3V9
+               h-3V10z M0,13h3v-1H0V13z M5,13h3v-1H5V13z M10,13h3v-1h-3V13z"
+                    />
+                  </svg>
+                </div>
+              </div>
+              <div class="btn--small btn--primary">
+                <svg
+                  version="1.1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 16 17"
+                  style="enable-background: new 0 0 16 17"
+                  xml:space="preserve"
+                >
+                  <path
+                    d="M11,6h5V1h-1v3.3l-1.2-1.1c-2.9-2.9-7.7-2.9-10.6,0c-2.9,2.9-2.9,7.7,0,10.6C4.7,15.3,6.6,16,8.5,16s3.8-0.7,5.3-2.2
+                 l-0.7-0.7c-2.5,2.5-6.7,2.5-9.2,0c-2.5-2.5-2.5-6.7,0-9.2c2.5-2.5,6.7-2.5,9.2,0L14.2,5H11V6z"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="article__section">
+          <div class="contaienr">
+            <div class="row article--center chart__container">
+
+              <!-- Chart Descriotion -->
+              <div
+                class="chart__description col-xl-8 col-lg-10 col-md-10 col-sm-12 row"
+              >
+                <div
+                  class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 chart__description--row"
+                >
+                  <div
+                    class="row col-xl-5 col-lg-5 col-md-5 col-sm-12 chart__description--item"
+                  >
+                    <div class="chart__description--title text--bold">
+                      Visit Signups
+                    </div>
+                    <div class="chart__description--value">123</div>
+                  </div>
+                  <div
+                    class="row col-xl-5 col-lg-5 col-md-5 col-sm-12 chart__description--item"
+                  >
+                    <div class="chart__description--title text--bold">
+                      Net deposit
+                    </div>
+                    <div class="chart__description--value">564</div>
+                  </div>
+                </div>
+                <div
+                  class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 chart__description--row"
+                >
+                  <div
+                    class="row col-xl-5 col-lg-5 col-md-5 col-sm-12 chart__description--item"
+                  >
+                    <div class="chart__description--title text--bold">
+                      FTD
+                    </div>
+                    <div class="chart__description--value">445</div>
+                  </div>
+                  <div
+                    class="row col-xl-5 col-lg-5 col-md-5 col-sm-12 chart__description--item"
+                  >
+                    <div class="chart__description--title text--bold">
+                      Turn over
+                    </div>
+                    <div class="chart__description--value">432</div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Chart Options -->
+              <div
+                class="chart__options col-xl-8 col-lg-10 col-md-10 col-sm-12 row"
+              >
+                <div class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 chart__options--row">
+                  <h3 class="text--bold chart__options--title">Earnings chart</h3>
+                </div>
+                <div class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 chart__options--row article--center">
+                  <div class="chart__options--buttons col-xl-6 col-lg-6 col-md-6 col-sm-12 row">
+                    <div class="chart__options--signup row">
+                      <div class="btn--dot"></div>
+                      <div class="btn--name">Signups</div>
+                    </div>
+                    <div class="chart__options--ftd row">
+                      <div class="btn--dot"></div>
+                      <div class="btn--name">FTD</div>
+                    </div>
+                    <div class="chart__options--earned row">
+                      <div class="btn--dot"></div>
+                      <div class="btn--name">Earned</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Chart Main -->
+              <div
+                class="chart__main col-xl-8 col-lg-10 col-md-10 col-sm-12 row"
+              >
+                <div class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 chart__main--img">
+                  <img src="./images/chart.png" alt="chart_img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <!-- <article class="page__article"></article> -->
     </section>
   </body>
 </html>
