--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Administrator Panel | General</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Rock+Salt&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.78032849.css">
-    <script defer="" src="/script.d573be0b.js"></script>
-  <script src="/style.78032849.js"></script></head>
+    <link rel="stylesheet" href="/dist/style.78032849.css">
+    <script defer="" src="/dist/script.d573be0b.js"></script>
+  <script src="/dist/style.78032849.js"></script></head>
   <body>
     <header class="top__menu row">
       <div class="col-xl-2 col-lg-4 col-md-4 col-sm-12">
@@ -296,7 +296,7 @@ h3.5C11.3,1,12,1.7,12,2.5V10.5z"></path>
               <!-- Chart Main -->
               <div class="chart__main col-xl-8 col-lg-10 col-md-10 col-sm-12 row">
                 <div class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 chart__main--img">
-                  <img src="/chart.47762f41.png" alt="chart_img">
+                  <img src="/dist/chart.47762f41.png" alt="chart_img">
                 </div>
               </div>
             </div>
